--- a/Anime.css
+++ b/Anime.css
@@ -740,7 +740,7 @@ https://googledrive.com/host/"item number"
 #more477 {background-image: url(http://cdn.myanimelist.net/images/anime/7/9931.jpg);}
 #more249 {background-image: url(http://cdn.myanimelist.net/images/anime/8/20483.jpg);}
 #more60 {background-image: url(http://cdn.myanimelist.net/images/anime/13/14141.jpg);}
-#more22147 {background-image: url(http://cdn.myanimelist.net/images/anime/10/74763.jpg);}
+#more22147 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79593l.jpg);}
 #more20431 {background-image: url(http://cdn.myanimelist.net/images/anime/9/55913.jpg);}
 #more19671 {background-image: url(http://cdn.myanimelist.net/images/anime/3/55083.jpg);}
 #more18119 {background-image: url(http://cdn.myanimelist.net/images/anime/13/51579.jpg);}
@@ -10628,7 +10628,6 @@ https://googledrive.com/host/"item number"
 #more32268 {background-image: url(http://cdn.myanimelist.net/images/anime/2/77744.jpg);}
 #more31772 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76519.jpg);}
 #more31389 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75684.jpg);}
-
 
 
 
