--- a/Anime.css
+++ b/Anime.css
@@ -1625,7 +1625,7 @@ https://googledrive.com/host/"item number"
 #more1081 {background-image: url(http://cdn.myanimelist.net/images/anime/3/21257.jpg);}
 #more940 {background-image: url(http://cdn.myanimelist.net/images/anime/1/2508.jpg);}
 #more908 {background-image: url(http://cdn.myanimelist.net/images/anime/10/18689.jpg);}
-#more845 {background-image: url(http://cdn.myanimelist.net/images/anime/5/11099.jpg);}
+#more845 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/11099.jpg);}
 #more633 {background-image: url(http://cdn.myanimelist.net/images/anime/4/21210.jpg);}
 #more335 {background-image: url(http://cdn.myanimelist.net/images/anime/4/50009.jpg);}
 #more326 {background-image: url(http://cdn.myanimelist.net/images/anime/10/64543.jpg);}
