--- a/Anime.css
+++ b/Anime.css
@@ -48,7 +48,7 @@ https://googledrive.com/host/"item number"
 #more431 {background-image: url(http://cdn.myanimelist.net/images/anime/9/42069.jpg);}
 #more19647 {background-image: url(http://cdn.myanimelist.net/images/anime/6/56147.jpg);}
 #more24415 {background-image: url(http://cdn.myanimelist.net/images/anime/4/68299.jpg);}
-#more9989 {background-image: url(http://cdn.myanimelist.net/images/anime/12/28009.jpg);}
+#more9989 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79697l.jpg);}
 #more3297 {background-image: url(http://cdn.myanimelist.net/images/anime/7/46913.jpg);}
 #more22135 {background-image: url(http://cdn.myanimelist.net/images/anime/10/58041.jpg);}
 #more10379 {background-image: url(http://cdn.myanimelist.net/images/anime/7/35323.jpg);}
