--- a/Anime.css
+++ b/Anime.css
@@ -9,8 +9,8 @@ https://googledrive.com/host/"item number"
 
 */
 
-#more30321 {background-image: url(https://googledrive.com/host/0B0Ad_ogMG9XaWFMtZ1NQWXFMX3M);}
-#more31181 {background-image: url(https://googledrive.com/host/0B0Ad_ogMG9Xab1BYUldrdU9GTUU);}
+#more30321 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77275l.jpg);}
+#more31181 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81100l.jpg);}
 #more5114 {background-image: url(http://cdn.myanimelist.net/images/anime/5/47421.jpg);}
 #more9253 {background-image: url(http://cdn.myanimelist.net/images/anime/5/73199l.jpg);}
 #more11061 {background-image: url(http://cdn.myanimelist.net/images/anime/11/33657.jpg);}
@@ -2041,7 +2041,7 @@ https://googledrive.com/host/"item number"
 #more6951 {background-image: url(http://cdn.myanimelist.net/images/anime/3/30085.jpg);}
 #more6548 {background-image: url(http://cdn.myanimelist.net/images/anime/9/24977.jpg);}
 #more6198 {background-image: url(http://cdn.myanimelist.net/images/anime/13/13791.jpg);}
-#more6164 {background-image: url(http://cdn.myanimelist.net/images/anime/11/50353.jpg);}
+#more6164 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/80255.jpg);}
 #more5832 {background-image: url(http://cdn.myanimelist.net/images/anime/9/71349.jpg);}
 #more5097 {background-image: url(http://cdn.myanimelist.net/images/anime/3/9995.jpg);}
 #more4191 {background-image: url(http://cdn.myanimelist.net/images/anime/2/17877.jpg);}
