--- a/Anime.css
+++ b/Anime.css
@@ -269,7 +269,7 @@ https://googledrive.com/host/"item number"
 #more5682 {background-image: url(http://cdn.myanimelist.net/images/anime/8/22470.jpg);}
 #more4772 {background-image: url(http://cdn.myanimelist.net/images/anime/11/15053.jpg);}
 #more1914 {background-image: url(http://cdn.myanimelist.net/images/anime/7/15931.jpg);}
-#more1689 {background-image: url(http://cdn.myanimelist.net/images/anime/6/2483.jpg);}
+#more1689 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/73426.jpg);}
 #more1566 {background-image: url(http://cdn.myanimelist.net/images/anime/4/29816.jpg);}
 #more16 {background-image: url(http://cdn.myanimelist.net/images/anime/8/4167.jpg);}
 #more18179 {background-image: url(http://cdn.myanimelist.net/images/anime/5/53211.jpg);}
