--- a/Anime.css
+++ b/Anime.css
@@ -11,43 +11,43 @@ https://googledrive.com/host/"item number"
 
 #more30321 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77275l.jpg);}
 #more31181 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81100l.jpg);}
-#more5114 {background-image: url(http://cdn.myanimelist.net/images/anime/5/47421.jpg);}
-#more9253 {background-image: url(http://cdn.myanimelist.net/images/anime/5/73199l.jpg);}
-#more11061 {background-image: url(http://cdn.myanimelist.net/images/anime/11/33657.jpg);}
-#more9969 {background-image: url(http://cdn.myanimelist.net/images/anime/4/50361.jpg);}
-#more15335 {background-image: url(http://cdn.myanimelist.net/images/anime/12/49197.jpg);}
-#more4181 {background-image: url(http://cdn.myanimelist.net/images/anime/13/24647.jpg);}
-#more820 {background-image: url(http://cdn.myanimelist.net/images/anime/13/13225.jpg);}
-#more15417 {background-image: url(http://cdn.myanimelist.net/images/anime/4/43157.jpg);}
-#more918 {background-image: url(http://cdn.myanimelist.net/images/anime/13/50359.jpg);}
-#more2904 {background-image: url(http://cdn.myanimelist.net/images/anime/4/9391.jpg);}
-#more24701 {background-image: url(http://cdn.myanimelist.net/images/anime/9/68095.jpg);}
-#more199 {background-image: url(http://cdn.myanimelist.net/images/anime/10/42079.jpg);}
-#more12355 {background-image: url(http://cdn.myanimelist.net/images/anime/9/35721.jpg);}
-#more7311 {background-image: url(http://cdn.myanimelist.net/images/anime/9/24646.jpg);}
-#more44 {background-image: url(http://cdn.myanimelist.net/images/anime/4/7076.jpg);}
-#more1575 {background-image: url(http://cdn.myanimelist.net/images/anime/5/50331.jpg);}
-#more263 {background-image: url(http://cdn.myanimelist.net/images/anime/10/2025.jpg);}
-#more17074 {background-image: url(http://cdn.myanimelist.net/images/anime/3/52133.jpg);}
-#more1 {background-image: url(http://cdn.myanimelist.net/images/anime/4/19644.jpg);}
-#more21939 {background-image: url(http://cdn.myanimelist.net/images/anime/13/58533.jpg);}
-#more2001 {background-image: url(http://cdn.myanimelist.net/images/anime/4/5123.jpg);}
-#more457 {background-image: url(http://cdn.myanimelist.net/images/anime/5/30699.jpg);}
-#more245 {background-image: url(http://cdn.myanimelist.net/images/anime/13/11460.jpg);}
-#more164 {background-image: url(http://cdn.myanimelist.net/images/anime/9/26570.jpg);}
-#more11741 {background-image: url(http://cdn.myanimelist.net/images/anime/8/41125.jpg);}
-#more1535 {background-image: url(http://cdn.myanimelist.net/images/anime/9/9453.jpg);}
-#more11665 {background-image: url(http://cdn.myanimelist.net/images/anime/3/37449.jpg);}
-#more5258 {background-image: url(http://cdn.myanimelist.net/images/anime/8/56617.jpg);}
-#more12365 {background-image: url(http://cdn.myanimelist.net/images/anime/6/41845.jpg);}
-#more19 {background-image: url(http://cdn.myanimelist.net/images/anime/10/18793.jpg);}
-#more22535 {background-image: url(http://cdn.myanimelist.net/images/anime/3/73178.jpg);}
-#more16894 {background-image: url(http://cdn.myanimelist.net/images/anime/9/56155.jpg);}
-#more16498 {background-image: url(http://cdn.myanimelist.net/images/anime/10/47347.jpg);}
-#more4282 {background-image: url(http://cdn.myanimelist.net/images/anime/6/27321.jpg);}
-#more431 {background-image: url(http://cdn.myanimelist.net/images/anime/9/42069.jpg);}
-#more19647 {background-image: url(http://cdn.myanimelist.net/images/anime/6/56147.jpg);}
-#more24415 {background-image: url(http://cdn.myanimelist.net/images/anime/4/68299.jpg);}
+#more5114 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/47421.jpg);}
+#more9253 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/73199.jpg);}
+#more11061 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/33657.jpg);}
+#more9969 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/50361.jpg);}
+#more15335 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/51279.jpg);}
+#more4181 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/24647.jpg);}
+#more820 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/13225.jpg);}
+#more15417 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/75172.jpg);}
+#more918 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/10038.jpg);}
+#more2904 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/9391.jpg);}
+#more24701 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/68095.jpg);}
+#more199 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/79597.jpg);}
+#more12355 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/35721.jpg);}
+#more7311 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/73842.jpg);}
+#more44 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/13160.jpg);}
+#more1575 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/50331.jpg);}
+#more263 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/2025.jpg);}
+#more17074 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/52133.jpg);}
+#more1 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/19644.jpg);}
+#more21939 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/58533.jpg);}
+#more2001 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/5123.jpg);}
+#more457 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/73862.jpg);}
+#more245 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/11460.jpg);}
+#more164 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/75919.jpg);}
+#more11741 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/41125.jpg);}
+#more1535 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/9453.jpg);}
+#more11665 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/37449.jpg);}
+#more5258 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/56617.jpg);}
+#more12365 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/41845.jpg);}
+#more19 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/18793.jpg);}
+#more22535 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/73178.jpg);}
+#more16894 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/56155.jpg);}
+#more16498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/47347.jpg);}
+#more4282 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/9246.jpg);}
+#more431 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/75810.jpg);}
+#more19647 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/56147.jpg);}
+#more24415 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/68299.jpg);}
 #more9989 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79697l.jpg);}
 #more3297 {background-image: url(http://cdn.myanimelist.net/images/anime/7/46913.jpg);}
 #more22135 {background-image: url(http://cdn.myanimelist.net/images/anime/10/58041.jpg);}
