--- a/Anime.css
+++ b/Anime.css
@@ -180,7 +180,7 @@ https://googledrive.com/host/"item number"
 #more7674 {background-image: url(http://cdn.myanimelist.net/images/anime/6/26138.jpg);}
 #more4814 {background-image: url(http://cdn.myanimelist.net/images/anime/6/38417.jpg);}
 #more138 {background-image: url(http://cdn.myanimelist.net/images/anime/13/37203.jpg);}
-#more16782 {background-image: url(http://cdn.myanimelist.net/images/anime/12/59443.jpg);}
+#more16782 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/79676.jpg);}
 #more15323 {background-image: url(http://cdn.myanimelist.net/images/anime/5/41415.jpg);}
 #more11843 {background-image: url(http://cdn.myanimelist.net/images/anime/3/33257.jpg);}
 #more6864 {background-image: url(http://cdn.myanimelist.net/images/anime/9/25080.jpg);}
@@ -1365,7 +1365,7 @@ https://googledrive.com/host/"item number"
 #more476 {background-image: url(http://cdn.myanimelist.net/images/anime/8/19926.jpg);}
 #more158 {background-image: url(http://cdn.myanimelist.net/images/anime/11/2711.jpg);}
 #more29 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50901.jpg);}
-#more21273 {background-image: url(http://cdn.myanimelist.net/images/anime/6/61255.jpg);}
+#more21273 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/79600.jpg);}
 #more20939 {background-image: url(http://cdn.myanimelist.net/images/anime/6/63023.jpg);}
 #more17643 {background-image: url(http://cdn.myanimelist.net/images/anime/9/56461.jpg);}
 #more15591 {background-image: url(http://cdn.myanimelist.net/images/anime/8/50549.jpg);}
@@ -1963,7 +1963,7 @@ https://googledrive.com/host/"item number"
 #more18441 {background-image: url(http://cdn.myanimelist.net/images/anime/2/52611.jpg);}
 #more16468 {background-image: url(http://cdn.myanimelist.net/images/anime/6/71049.jpg);}
 #more10479 {background-image: url(http://cdn.myanimelist.net/images/anime/4/31637.jpg);}
-#more10456 {background-image: url(http://cdn.myanimelist.net/images/anime/4/33743.jpg);}
+#more10456 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/79598.jpg);}
 #more9120 {background-image: url(http://cdn.myanimelist.net/images/anime/7/26349.jpg);}
 #more5079 {background-image: url(http://cdn.myanimelist.net/images/anime/3/19935.jpg);}
 #more3738 {background-image: url(http://cdn.myanimelist.net/images/anime/5/15661.jpg);}
@@ -8136,7 +8136,7 @@ https://googledrive.com/host/"item number"
 #more28749 {background-image: url(http://cdn.myanimelist.net/images/anime/12/69389.jpg);}
 #more28735 {background-image: url(http://cdn.myanimelist.net/images/anime/2/70523.jpg);}
 #more28733 {background-image: url(http://cdn.myanimelist.net/images/anime/12/69363.jpg);}
-#more28725 {background-image: url(http://cdn.myanimelist.net/images/anime/2/71526.jpg);}
+#more28725 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/75745.jpg);}
 #more28723 {background-image: url(http://cdn.myanimelist.net/images/anime/7/69345.jpg);}
 #more28713 {background-image: url(http://cdn.myanimelist.net/images/anime/6/69325.jpg);}
 #more28695 {background-image: url(http://cdn.myanimelist.net/images/anime/2/69265.jpg);}
@@ -10523,7 +10523,7 @@ https://googledrive.com/host/"item number"
 #more1547 {background-image: url(http://cdn.myanimelist.net/images/anime/7/18652.jpg);}
 #more31297 {background-image: url(http://cdn.myanimelist.net/images/anime/3/78666.jpg);}
 #more30514 {background-image: url(http://cdn.myanimelist.net/images/anime/9/73095.jpg);}
-#more30296 {background-image: url(http://cdn.myanimelist.net/images/anime/7/73921l.jpg);}
+#more30296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/76493.jpg);}
 #more30484 {background-image: url(http://cdn.myanimelist.net/images/anime/7/73480.jpg);}
 #more30458 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76048.jpg);}
 #more31324 {background-image: url(http://cdn.myanimelist.net/images/anime/3/74612l.jpg);}
@@ -10628,7 +10628,7 @@ https://googledrive.com/host/"item number"
 #more32268 {background-image: url(http://cdn.myanimelist.net/images/anime/2/77744.jpg);}
 #more31772 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76519.jpg);}
 #more31389 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75684.jpg);}
-
+#more31637 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/77382.jpg);}
 
 
 
