--- a/Anime.css
+++ b/Anime.css
@@ -7575,7 +7575,7 @@ https://googledrive.com/host/"item number"
 #more30243 {background-image: url(http://cdn.myanimelist.net/images/anime/9/72370.jpg);}
 #more30242 {background-image: url(http://cdn.myanimelist.net/images/anime/5/72369.jpg);}
 #more30241 {background-image: url(http://cdn.myanimelist.net/images/anime/7/72368.jpg);}
-#more30240 {background-image: url(http://cdn.myanimelist.net/images/anime/10/72403.jpg);}
+#more30240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/74231.webp);}
 #more30238 {background-image: url(http://cdn.myanimelist.net/images/anime/8/72354.jpg);}
 #more30235 {background-image: url(http://cdn.myanimelist.net/images/anime/2/72348.jpg);}
 #more30234 {background-image: url(http://cdn.myanimelist.net/images/anime/4/72346.jpg);}
