--- a/Anime.css
+++ b/Anime.css
@@ -1,12 +1,7 @@
 {}
 
 /*
-simple rule of add = # {background-image: url();}
-
-For custom Image :
-
-https://googledrive.com/host/"item number"
-
+simple rule of add = #more {background-image: url();}
 */
 
 #more30321 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77275l.jpg);}
