--- a/Anime.css
+++ b/Anime.css
@@ -187,7 +187,8 @@ simple rule of add = #more {background-image: url();}
 #more3002 {background-image: url(http://cdn.myanimelist.net/images/anime/6/24731.jpg);}
 #more1519 {background-image: url(http://cdn.myanimelist.net/images/anime/10/20980.jpg);}
 #more28025 {background-image: url(http://cdn.myanimelist.net/images/anime/6/68259.jpg);}
-#more18679 {background-image: url(http://cdn.myanimelist.net/images/anime/5/54379.jpg);}
+#more18679 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/75514.webp
+);}
 #more9130 {background-image: url(http://cdn.myanimelist.net/images/anime/12/29597.jpg);}
 #more6675 {background-image: url(http://cdn.myanimelist.net/images/anime/9/34297.jpg);}
 #more1033 {background-image: url(http://cdn.myanimelist.net/images/anime/1/1033.jpg);}
@@ -1233,7 +1234,7 @@ simple rule of add = #more {background-image: url();}
 #more25 {background-image: url(http://cdn.myanimelist.net/images/anime/12/24358.jpg);}
 #more18523 {background-image: url(http://cdn.myanimelist.net/images/anime/5/51879.jpg);}
 #more16287 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71053.jpg);}
-#more11553 {background-image: url(http://cdn.myanimelist.net/images/anime/7/61003.jpg);}
+#more11553 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79437.webp);}
 #more10862 {background-image: url(http://cdn.myanimelist.net/images/anime/3/30020.jpg);}
 #more10798 {background-image: url(http://cdn.myanimelist.net/images/anime/12/33009.jpg);}
 #more10050 {background-image: url(http://cdn.myanimelist.net/images/anime/10/28051.jpg);}
@@ -7718,7 +7719,7 @@ simple rule of add = #more {background-image: url();}
 #more30024 {background-image: url(http://cdn.myanimelist.net/images/anime/5/71978.jpg);}
 #more30018 {background-image: url(http://cdn.myanimelist.net/images/anime/3/71980.jpg);}
 #more30016 {background-image: url(http://cdn.myanimelist.net/images/anime/7/71931.jpg);}
-#more30015 {background-image: url(http://cdn.myanimelist.net/images/anime/8/71930.jpg);}
+#more30015 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82149.webp);}
 #more30014 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71929.jpg);}
 #more30013 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71928.jpg);}
 #more30012 {background-image: url(http://cdn.myanimelist.net/images/anime/5/71950.jpg);}
@@ -10583,7 +10584,7 @@ simple rule of add = #more {background-image: url();}
 #more32262 {background-image: url(http://cdn.myanimelist.net/images/anime/4/77447l.jpg);}
 #more32282 {background-image: url(http://cdn.myanimelist.net/images/anime/12/77529l.jpg);}
 #more31080 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77219l.jpg);}
-#more31711 {background-image: url(http://cdn.myanimelist.net/images/anime/12/76413.jpg);}
+#more31711 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79330.webp);}
 #more32093 {background-image: url(http://cdn.myanimelist.net/images/anime/4/77159.jpg);}
 #more32105 {background-image: url(http://cdn.myanimelist.net/images/anime/3/77328.jpg);}
 #more31763 {background-image: url(http://cdn.myanimelist.net/images/anime/10/78624.jpg);}
@@ -10599,7 +10600,7 @@ simple rule of add = #more {background-image: url();}
 #more31737 {background-image: url(http://cdn.myanimelist.net/images/anime/11/78961.jpg);}
 #more32188 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77324.jpg);}
 #more32828 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78872.jpg);}
-#more31404 {background-image: url(http://cdn.myanimelist.net/images/anime/9/78895.jpg);}
+#more31404 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79414.webp);}
 #more31051 {background-image: url(http://cdn.myanimelist.net/images/anime/13/77323.jpg);}
 #more32668 {background-image: url(http://cdn.myanimelist.net/images/anime/5/78406.jpg);}
 #more32566 {background-image: url(http://cdn.myanimelist.net/images/anime/6/78178.jpg);}
@@ -10624,11 +10625,12 @@ simple rule of add = #more {background-image: url();}
 #more31772 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76519.jpg);}
 #more31389 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75684.jpg);}
 #more31637 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/77382.jpg);}
-
-
-
-
-
+#more12679 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/48925.webp);}
+#more32485 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/77935.webp);}
+#more31646 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82898.webp);}
+#more32998 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79160.webp
+);}
+#more33506 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82644.webp);}
 
 
 
