--- a/Anime.css
+++ b/Anime.css
@@ -10532,7 +10532,7 @@ simple rule of add = #more {background-image: url();}
 #more31553 {background-image: url(http://cdn.myanimelist.net/images/anime/9/76070.jpg);}
 #more31636 {background-image: url(http://cdn.myanimelist.net/images/anime/4/76277.jpg);}
 #more30694 {background-image: url(http://cdn.myanimelist.net/images/anime/7/74606.jpg);}
-#more31339 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75373.jpg);}
+#more31339 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80271.webp);}
 #more31552 {background-image: url(http://cdn.myanimelist.net/images/anime/3/76082.jpg);}
 #more30544 {background-image: url(http://cdn.myanimelist.net/images/anime/5/76034.jpg);}
 #more31629 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76227.jpg);}
@@ -10628,13 +10628,13 @@ simple rule of add = #more {background-image: url();}
 #more12679 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/48925.webp);}
 #more32485 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/77935.webp);}
 #more31646 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82898.webp);}
-#more32998 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79160.webp
-);}
+#more32998 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79160.webp);}
 #more33506 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82644.webp);}
-
-
-
-
-
-
-
+#more33729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81111.webp);}
+#more33730 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/81112.webp);}
+#more33728 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82495.webp);}
+#more33771 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/81891.webp);}
+#more34208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82344.webp);}
+#more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79814.webp);}
+#more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
+#more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82867.webp);}
