--- a/Anime.css
+++ b/Anime.css
@@ -187,8 +187,7 @@ simple rule of add = #more {background-image: url();}
 #more3002 {background-image: url(http://cdn.myanimelist.net/images/anime/6/24731.jpg);}
 #more1519 {background-image: url(http://cdn.myanimelist.net/images/anime/10/20980.jpg);}
 #more28025 {background-image: url(http://cdn.myanimelist.net/images/anime/6/68259.jpg);}
-#more18679 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/75514.webp
-);}
+#more18679 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/75514.webp);}
 #more9130 {background-image: url(http://cdn.myanimelist.net/images/anime/12/29597.jpg);}
 #more6675 {background-image: url(http://cdn.myanimelist.net/images/anime/9/34297.jpg);}
 #more1033 {background-image: url(http://cdn.myanimelist.net/images/anime/1/1033.jpg);}
